Use correct namespacing for all objects

--- a/bitstyles/bitstyles/objects/_error.scss
+++ b/bitstyles/bitstyles/objects/_error.scss
@@ -9,6 +9,6 @@
 //
 // Styleguide 1.24
 
-.o-error {
+.#{$bitstyles-namespace}o-error {
   color: $bitstyles-color-error;
 }
